# Email-Traige-Env

./: Dockerfile  README.md  environment.py  graders.py  inference.py  openenv.yaml  prevalidate.py  pyproject.toml  requirements.txt
email-triage-env/email-triage-env/: Dockerfile  README.md  data.py  inference.py  openenv.yaml  requirements.txt
server/: app.py
