[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-openenv"
version = "1.0.0"
description = "OpenEnv email triage environment for hackathon submission"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Aditya" }
]
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "openai==1.50.0",
  "requests==2.32.3",
  "pyyaml==6.0.2",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["environment", "inference", "data", "graders", "prevalidate"]

[tool.setuptools.packages.find]
include = ["server*"]
